testcases/bindgen/162/error_message.txt
error[E0740]: field must implement `Copy` or be wrapped in `ManuallyDrop<...>` to be used in a union
  --> ./open/162/generated_bindings.rs:12:5
   |
12 |     pub _M_val: _Tp,
   |     ^^^^^^^^^^^^^^^
   |
   = note: union fields must not have drop side-effects, which is currently enforced via either `Copy` or `ManuallyDrop<...>`
help: wrap the field type in `ManuallyDrop<...>`
   |
12 |     pub _M_val: std::mem::ManuallyDrop<_Tp>,
   |                 +++++++++++++++++++++++   +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0740`.
